  - settings are the same and can be shared between Windows version of VPX and the standalone version (Linux, Mac, Android, iOS, Raspberry,...),
  - allow to see all the available settings at once (not so easy before, since there are a few hundreds of them),
  - allow easier collaboration by being able to share the setting file with bug reports.

- the application is now fully 'DPI aware'. This means that one can use multiple monitors at different DPI settings.
  This may require to adjust the position of windows on existing installs.

- add 2 new camera layout modes which work better for cabinets, and for anaglyph stereo (as well as other use cases) and allows:
  - to setup the player position in real word units, measuring from the bottom center of the playfield in centimeters. This should allow to have a single position corresponding to your size and play position for all your tables.
  - to setup the camera like a 'real' camera: there is no more layback but a view offset, the other properties being simply the inclination and the field of view.
  - for camera mode, adjust the user interface to show these informations and allow to easily reset to a default position by pressing the plunger key.
  - support a new 'window' mode, designed for pincab users, where the screen is not orthogonal to the viewer, requiring an adjusted projection.
- change camera mode buttons to match the ones when starting VPX with -povedit (Start = Export POV, Credit = Reset/Quit, Plunger = Defaults)

- the ball texture can now be set as either a spherical map (the default, like it used to be before 10.8), or as an equirectangular map. Equirectangular maps
  are also used already for the environment lighting. The benefit of using them is that the reflections are view dependent and that they can match
  the table environment lighting image for full consistency between the lighting and reflections.
